# sudoku

./: .gitignore  CMakeLists.txt  README.md  core.cpp  core.hpp  main.cpp
src/: core.cpp  core.hpp  main.cpp
test/: invalid_character.txt  invalid_length.txt  to_solve.txt
